--- a/destination/templates/municipality_detail.html
+++ b/destination/templates/municipality_detail.html
@@ -1,5 +1,7 @@
+{% include 'home/home.html'%}
+
 <h1>{{ municipality.name }}</h1>
 <img src="{{ municipality.image.url }}" alt="{{ municipality.name }}" style="width: 300px;">
 <p>{{ municipality.description }}</p>
 <p>Category: {{ municipality.category }}</p>
-<a href="{% url 'municipality_list' %}">Back to list</a>
+<!-- <a href="{% url 'municipality_list' %}">Back to list</a> -->
