feat(municipalities): Add empty landing page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -4,8 +4,9 @@
         <div class="container">
             <h1>Antioquia Off the Map</h1>
             <ul>
-                <li><a href="{% url 'home' %}">Inicio</a></li>
+                <li><a href="{% url 'landing' %}">Inicio</a></li>
                 <li><a href="{% url 'municipality_name_list'%}">Municipios</a></li>
+
             </ul>
         </div>
     </nav>
