Install - Tailwind setted up in the project

--- a/destination/templates/municipality_detail.html
+++ b/destination/templates/municipality_detail.html
@@ -1,7 +1,17 @@
-{% include 'home/home.html'%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    {% include 'home.html'%}
 
-<h1>{{ municipality.name }}</h1>
-<img src="{{ municipality.image.url }}" alt="{{ municipality.name }}" style="width: 300px;">
-<p>{{ municipality.description }}</p>
-<p>Category: {{ municipality.category }}</p>
-<!-- <a href="{% url 'municipality_list' %}">Back to list</a> -->
+    <h1>{{ municipality.name }}</h1>
+    <img src="{{ municipality.image.url }}" alt="{{ municipality.name }}" style="width: 300px;">
+    <p>{{ municipality.description }}</p>
+    <p>Category: {{ municipality.category }}</p>
+    <!-- <a href="{% url 'municipality_list' %}">Back to list</a> -->
+</body>
+</html>
