--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -13,7 +13,7 @@
         <!-- logo -->
         <h1 class="w-3/12">
             <a href="{% url 'landing' %}">
-                <img src="{% static 'logoo.jpeg' %}" alt="logo" class="w-20">
+                <img src="{% static 'logo2.jpeg' %}" alt="logo" class="w-20">
             </a>
         </h1>
     
