Implemented Experience Search functionality. Search results now correctly display available experiences categorized under 'Where to Eat,' 'Where to Stay,' and 'Things to Do.'

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -26,6 +26,9 @@
 					<li class="p-4 border-b-2 border-green-500 border-opacity-0 hover:border-opacity-100 hover:text-green-500 duration-200 cursor-pointer">
 					  <a href="{% url 'municipality_name_list'%}">Municipios</a>
 					</li>
+					<li class="p-4 border-b-2 border-green-500 border-opacity-0 hover:border-opacity-100 hover:text-green-500 duration-200 cursor-pointer">
+						<a href="{% url 'experience_search_page' %}">Buscar Experiencias</a>
+					</li>
 				</ul>
 			</nav>
 		
