--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -13,7 +13,7 @@
 			<!-- logo -->
 			<h1 class="w-3/12">
 				<a href="{% url 'home' %}">
-					<img src="{% static 'logo2.jpeg' %}" alt="logo" class="w-20">
+					<img src="{% static 'logo_nombre.png' %}" alt="logo" class="">
 				</a>
 			</h1>
 		
